[project]
name = "MARLite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mpe2>=0.0.1",
    "networkx>=3.4.2",
    "pettingzoo[butterfly,mpe,sisl]>=1.25.0",
    "pyyaml>=6.0.2",
    "smac-pettingzoo",
    "smacv2",
    "torch>=2.7.0",
    "torch-geometric>=2.6.1",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "matplotlib>=3.10.3",
    "notebook>=7.4.2",
    "pytest>=8.3.5",
    "pandas>=2.3.0",
]

[tool.uv.sources]
smacv2 = { git = "https://github.com/oxwhirl/smacv2" }
smac-pettingzoo = { git = "https://github.com/xihuai18/SMAC-PettingZoo" }
